Валидация параметров запуска. [#246865]